--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
-        "laraveles/spanish": "^1.5"
+        "laraveles/spanish": "^1.5",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.23"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
