--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/ui": "^3.4",
         "laraveles/spanish": "^1.5",
         "maatwebsite/excel": "^3.1",
-        "phpoffice/phpspreadsheet": "^1.23"
+        "phpoffice/phpspreadsheet": "^1.23",
+        "phpoffice/phpword": "^0.18.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
