--- a/sftp-config.json
+++ b/sftp-config.json
@@ -15,11 +15,11 @@
     "confirm_overwrite_newer": false,
     
     "host": "85.208.21.142",
-    "user": "dividae",
-    "password": "E&t6r81p",
+    "user": "tuweb",
+    "password": "5wb*08Te",
     "port": "21",
     
-    "remote_path": "/",
+    "remote_path": "/httpdocs/dividae",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
