--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "*",
         "jeroennoten/laravel-adminlte": "^3.8",
+        "josiasmontag/laravel-recaptchav3": "^1.0",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
