--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "anhskohbo/no-captcha": "^3.5",
+        "doctrine/dbal": "^4.1",
         "guzzlehttp/guzzle": "*",
         "jeroennoten/laravel-adminlte": "^3.8",
         "josiasmontag/laravel-recaptchav3": "^1.0",
