--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "anhskohbo/no-captcha": "^3.5",
+        "bacon/bacon-qr-code": "^3.0",
         "doctrine/dbal": "^4.1",
         "guzzlehttp/guzzle": "*",
         "jeroennoten/laravel-adminlte": "^3.8",
@@ -19,7 +20,8 @@
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.23",
         "phpoffice/phpword": "^0.18.3",
-        "pragmarx/google2fa-laravel": "^2.2"
+        "pragmarx/google2fa-laravel": "^2.2",
+        "pragmarx/google2fa-qrcode": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
